--- a/cloud-vue/src/components/main/main.less
+++ b/cloud-vue/src/components/main/main.less
@@ -11,24 +11,28 @@
       transition: all .3s;
       background: #002140;
       overflow: hidden;
+
       img.max-logo {
         padding-top: 2px;
         width: 220px;
         display: block;
         margin: 0 auto;
       }
+
       img.min-logo {
         display: block;
         margin: 0 auto;
       }
+
       .logo-text {
         color: white;
         text-align: center;
         line-height: 60px;
       }
     }
+
     .side-menu-wrapper {
-      min-height: 100vh;
+      //min-height: 100vh;
     }
 
     .main-layout-header {
@@ -86,23 +90,26 @@
   &-layout-top {
     position: relative;
     overflow: hidden;
+
     .main-layout-logo {
       float: left;
       height: 60px;
       transition: all .3s;
       overflow: hidden;
+
       img.max-logo {
         width: 200px;
         display: block;
         margin: 0 auto;
       }
+
       img.min-logo {
         display: block;
         margin: 0 auto;
       }
     }
 
-    .ivu-layout-header{
+    .ivu-layout-header {
       height: 60px;
       background: #001529;
     }
@@ -127,6 +134,7 @@
     }
   }
 }
+
 .ivu-card {
   border-radius: 0px;
 }
